added the css file

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,9 +2,10 @@
     <html>
     <head>
         <title>Sam Sunders Quickfire Heroku Challeng</title>
+        <link href="../assets/scripts/styles.css" rel ="stylesheet"/>
     </head>
 
     <body>
-    <p>Hi This Works!</p>
+    <p>Here is some red text!</p>
     </body>
     </html>
