--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,7 +2,7 @@
     <html>
     <head>
         <title>Sam Sunders Quickfire Heroku Challeng</title>
-        <link href="../assets/scripts/styles.css" rel ="stylesheet"/>
+        <link href= __dirname + "../assets/scripts/styles.css" rel ="stylesheet"/>
     </head>
 
     <body>
