--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,6 +6,6 @@
     </head>
 
     <body>
-    <p>Here is some red text!</p>
+    <p style="color:red;">Here is some red text!</p>
     </body>
     </html>
