--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,10 +2,11 @@
     <html>
     <head>
         <title>Sam Sunders Quickfire Heroku Challeng</title>
-        <link href= "../assets/scripts/styles.css" rel ="stylesheet"/>
+        <link rel="stylesheet" type="text/css" href= "css/styles.css"/>
+
     </head>
 
     <body>
-    <p style="color:red;">Here is some red text!</p>
+    <p>Here is some red text!</p>
     </body>
     </html>
